--- a/web/src/comments/_Comment.scss
+++ b/web/src/comments/_Comment.scss
@@ -75,3 +75,13 @@
         align-items: center;
     }
 }
+
+.theme-light {
+    .comment {
+        border-color: $color-light-border;
+
+        &:first-of-type {
+            border: none;
+        }
+    }
+}
