--- a/web/src/search2/_SearchButton.scss
+++ b/web/src/search2/_SearchButton.scss
@@ -20,3 +20,13 @@
         }
     }
 }
+
+.theme-light {
+    .search-button2 {
+        background-color: $color-primary;
+
+        &:hover {
+            background-color: $color-primary-hover;
+        }
+    }
+}
