--- a/web/src/search2/_SearchNavbarItem.scss
+++ b/web/src/search2/_SearchNavbarItem.scss
@@ -27,3 +27,9 @@
         background-color: #1c2736;
     }
 }
+
+.theme-light {
+    .scope-label2:hover {
+        background-color: inherit;
+    }
+}
