--- a/web/src/search2/_SearchResults.scss
+++ b/web/src/search2/_SearchResults.scss
@@ -13,3 +13,11 @@
         text-align: right;
     }
 }
+
+.theme-light {
+    .search-results2 {
+        &__header {
+            color: $color-light-text-2;
+        }
+    }
+}
