--- a/web/src/repo/_DirectoryPage.scss
+++ b/web/src/repo/_DirectoryPage.scss
@@ -2,7 +2,6 @@
 .dir-page-entry {
     overflow-y: auto;
     padding: 2rem;
-    color: $color-text;
 
     &__head {
         display: flex;
@@ -87,7 +86,7 @@
     }
 
     &__return-arrow-link {
-        color: $color-text;
+        color: inherit;
     }
 
     &__icons-centered {
@@ -102,7 +101,27 @@
         color: inherit;
     }
 
+    &__icon-top {
+        fill: currentColor;
+        width: 2.25rem;
+        height: 2.25rem;
+        margin-right: 0.4rem;
+    }
+
     &__icon {
         margin-right: 0.4rem;
+    }
+}
+
+.theme-light {
+    .dir-page,
+    .dir-page-entry {
+        &__commit-message-cell {
+            color: inherit;
+        }
+
+        &__return-arrow-link {
+            color: inherit;
+        }
     }
 }
