--- a/web/src/search2/_QueryInput.scss
+++ b/web/src/search2/_QueryInput.scss
@@ -4,23 +4,8 @@
     flex: 1 0 auto;
     position: relative;
 
-    &__input {
-        width: 100%;
-        height: 100%;
-        background-color: #1c2736;
-        -webkit-appearance: none;
-        border: solid 1px rgb(51, 68, 90);
-        outline: none;
-        color: white;
-        font-size: inherit;
-
-        &::placeholder {
-            color: #93a9c8;
-        }
-
-        &:focus {
-            border-color: #1c7cd6;
-        }
+    &__field {
+        padding: 0 0.5rem;
     }
 
     &__suggestions {
@@ -35,5 +20,14 @@
         background-color: #1c2736;
         border: solid 1px rgb(27, 84, 138);
         border-top: none;
+    }
+}
+
+.theme-light {
+    .query-input2 {
+        &__suggestions {
+            background-color: $color-light-bg-2;
+            border-top: none;
+        }
     }
 }
