--- a/web/src/search2/_ResultContainer.scss
+++ b/web/src/search2/_ResultContainer.scss
@@ -35,3 +35,18 @@
         display: flex;
     }
 }
+
+.theme-light {
+    .result-container {
+        &__header {
+            background-color: $color-light-bg-2;
+            border-top: 1px solid $color-light-border;
+            border-left: 1px solid $color-light-border;
+            border-right: 1px solid $color-light-border;
+
+            &:hover {
+                background-color: $color-light-bg-4;
+            }
+        }
+    }
+}
