--- a/web/src/settings/_SettingsSidebar.scss
+++ b/web/src/settings/_SettingsSidebar.scss
@@ -1,3 +1,7 @@
+$color-theme-switcher-background: rgba(42, 58, 81, 0.7);
+$color-theme-switcher-background-selected: #39496a;
+$color-theme-switcher-btn-text: rgba(162, 176, 205, 0.5);
+
 .settings-sidebar {
     flex: 0 0 auto;
     width: 15.75rem;
@@ -43,7 +47,8 @@
         flex-direction: column;
 
         &-header,
-        &-link {
+        &-link,
+        &-link-user {
             height: 100%;
             padding: 0.5rem 0;
             display: flex;
@@ -52,6 +57,7 @@
 
         &-link:hover {
             background-color: rgba(42, 58, 81, 0.7);
+            text-decoration: none;
         }
 
         &-action {
@@ -88,12 +94,13 @@
         }
 
         &--active {
-            background: #1c7cd6;
+            background: $color-primary;
             color: #f2f4f8;
 
             &:hover {
-                background: #1c7cd6;
+                background: $color-primary;
                 color: #f2f4f8;
+                text-decoration: none;
             }
         }
     }
@@ -118,6 +125,115 @@
         &-row {
             overflow: hidden;
             text-overflow: ellipsis;
+        }
+    }
+
+    &__theme-switcher {
+        display: flex;
+        padding: 0.25rem 0.25rem 0.1rem;
+        background-color: $color-theme-switcher-background;
+        margin: 0.5rem;
+
+        &--button {
+            width: 100%;
+            color: $color-theme-switcher-btn-text;
+            padding: 0.25rem;
+            display: inline-flex;
+            justify-content: center;
+
+            &--selected {
+                background-color: $color-theme-switcher-background-selected;
+                color: inherit;
+            }
+        }
+
+        &--icon {
+            padding-right: 0.3rem;
+        }
+    }
+
+    &__link {
+        width: 50%;
+        cursor: pointer;
+    }
+
+    &__download-editor {
+        padding: 0.5rem;
+        text-align: center;
+
+        &-button {
+            background-color: #2b3750;
+            color: #93a9c8;
+
+            &:hover {
+                background-color: rgba(42, 58, 81, 0.7);
+                color: #f2f4f8;
+                text-decoration: none;
+            }
+        }
+    }
+}
+
+.theme-light {
+    .settings-sidebar {
+        background-color: $color-light-bg-1;
+        color: $color-light-text-1;
+        border-right: 1px solid $color-light-border;
+
+        &__header {
+            color: $color-light-text-1;
+            background: $color-light-bg-4;
+
+            &-account-settings {
+                background: $color-light-bg-1;
+            }
+        }
+
+        &__item {
+            &-link:hover {
+                background-color: $color-light-bg-2;
+                color: inherit;
+                text-decoration: none;
+            }
+
+            &--active {
+                background-color: $color-primary;
+                color: $color-light-text-4;
+
+                &:hover {
+                    background-color: $color-primary;
+                    text-decoration: none;
+                    color: $color-light-text-4;
+                }
+            }
+
+            &-action {
+                border-color: $color-light-border;
+            }
+        }
+
+        &__theme-switcher {
+            background: $color-light-bg-4;
+
+            &--button {
+                color: $color-light-text-3;
+
+                &--selected {
+                    background-color: $color-light-bg-3;
+                    color: inherit;
+                }
+            }
+        }
+
+        &__download-editor {
+            &-button {
+                background-color: $color-light-bg-2;
+            }
+
+            &-button:hover {
+                background-color: $color-light-bg-4;
+                text-decoration: none;
+            }
         }
     }
 }
