support searching by commit message using type:commit

--- a/web/src/components/_DecoratedTextLines.scss
+++ b/web/src/components/_DecoratedTextLines.scss
@@ -7,6 +7,10 @@
         width: 100%;
     }
 
+    tr.strong {
+        font-weight: bold;
+    }
+
     tr.hidden {
         display: none;
     }
