add padding back for search results (looks nicer)

--- a/web/src/search2/_SearchResults.scss
+++ b/web/src/search2/_SearchResults.scss
@@ -5,7 +5,12 @@
 
 .search-results2 {
     width: 100%;
-    padding-top: 0.5rem;
+    padding: 0.5rem 5rem;
+
+    @media (max-width: $media-lg) {
+        padding-left: 0;
+        padding-right: 0;
+    }
 
     &__header {
         color: #93a9c8;
