prevent invite form jitter when submitting due to increased loader height

--- a/web/src/settings/org/_InviteForm.scss
+++ b/web/src/settings/org/_InviteForm.scss
@@ -24,4 +24,10 @@
         width: 100%;
         max-width: 21rem;
     }
+
+    &__status {
+        padding: 0.5rem 0.5rem 0 0;
+        min-height: 2.75rem;
+        overflow: hidden;
+    }
 }
