--- a/web/src/repo/_Repository.scss
+++ b/web/src/repo/_Repository.scss
@@ -54,7 +54,7 @@
 
     &__sidebar-toggle {
         position: absolute;
-        top: 0;
+        top: 1px;
         right: -1.25rem;
         width: 1.25rem;
         height: 1.25rem;
