--- a/web/src/components/_ThemeSwitcher.scss
+++ b/web/src/components/_ThemeSwitcher.scss
@@ -24,6 +24,10 @@ $color-theme-switcher-btn-text: rgba(162, 176, 205, 0.5);
         &--selected {
             background-color: $color-theme-switcher-background-selected;
             color: inherit;
+
+            .theme-switcher__link:hover {
+                color: inherit;
+            }
         }
 
         &--left {
