web: add border to proposed queries, fix #8202 (#8230)

--- a/web/src/search2/_QueryButton.scss
+++ b/web/src/search2/_QueryButton.scss
@@ -19,3 +19,9 @@
         padding-bottom: 0.1rem;
     }
 }
+
+.theme-light {
+    .query-button {
+        border-color: $color-light-border;
+    }
+}
