fix markdown code block missing light theme #8218 (#8228)

--- a/web/src/comments/_CodeView.scss
+++ b/web/src/comments/_CodeView.scss
@@ -69,7 +69,7 @@
     .code-view {
         &__code {
             background: inherit;
-            border: 1px solid $color-light-border;
+            border-bottom: 1px solid $color-light-border;
         }
 
         &__line {
