update light theme text color, fix #8207 (#8243)

--- a/web/src/colors.scss
+++ b/web/src/colors.scss
@@ -24,7 +24,7 @@ $color-light-bg-3: #cad2e2;
 $color-light-bg-4: #e4e9f1;
 $color-light-bg-5: #566e9f;
 $color-light-bg-6: #070a0d;
-$color-light-text-1: #39496a;
+$color-light-text-1: #2b3750;
 $color-light-text-2: #6078a9;
 $color-light-text-3: rgba(57, 73, 106, 0.5);
 $color-light-text-4: white;
