--- a/web/src/marketing/_Toast.scss
+++ b/web/src/marketing/_Toast.scss
@@ -8,7 +8,7 @@
     align-items: start;
     border-radius: 0.25rem;
     background-color: $color-light-bg-2;
-    color: #39496a;
+    color: $color-light-text-1;
 
     &__logo {
         flex: 0 0 auto;
