--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -6,8 +6,6 @@ It should import all component stylesheets
 // Use duplicate selectors for the light-theme
 // stylelint-disable no-duplicate-selectors
 
-@import 'colors';
-
 // Media breakpoints
 $media-sm: 576px;
 $media-md: 768px;
@@ -19,6 +17,9 @@ $media-xl: 1200px;
 @import 'bootstrap/scss/variables';
 @import 'bootstrap/scss/mixins';
 @import 'bootstrap/scss/reboot';
+@import './global-styles/colors';
+@import './global-styles/type';
+@import './global-styles/code';
 
 // Define the 'system' font family
 //
@@ -68,10 +69,6 @@ body {
     height: 100vh;
     display: flex;
     color: $color-text;
-    // Actual base font size
-    font-size: 14px;
-    // 14px font size -> 24px line height
-    line-height: 1.7142857143;
 }
 
 // React root element
@@ -196,34 +193,6 @@ body {
     stroke: currentColor;
 }
 
-kbd {
-    font-family: Menlo;
-    display: inline-block;
-    line-height: 1.5;
-    height: 1.125rem;
-    font-size: 0.8em;
-    background-color: #93a9c8;
-    color: #2a3a51;
-    padding: 0 0.25rem;
-    margin: 0 0.125rem;
-    vertical-align: middle;
-    border-bottom-color: #5d7eac;
-    border-radius: 3px;
-    box-shadow: inset 0 -2px 0 #5d7eac;
-}
-
-.theme-light {
-    kbd {
-        color: $color-light-text-4;
-    }
-}
-
-.ui-title {
-    font-size: 12px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-}
-
 a {
     outline: 0;
     color: #93a9c8;
@@ -242,12 +211,6 @@ a {
             color: $color-light-text-5;
         }
     }
-}
-
-h1 {
-    font-size: 48px;
-    line-height: 54px;
-    margin: 0 0 1rem;
 }
 
 .btn {
@@ -508,13 +471,6 @@ h1 {
 
 .app {
     &__error {
-        &-id {
-            font-family: 'Menlo';
-            background-color: rgb(36, 49, 66);
-            padding: 0.3rem;
-            border-radius: 2px;
-        }
-
         > hr {
             margin-top: 1rem;
             margin-bottom: 1rem;
