support searching over multiple revisions of a repository at once
example query:

  repo:github.com/Microsoft/vscode$@*!refs/heads/release/*:*refs/heads/:^master type:diff publicLog

--- a/web/src/app.scss
+++ b/web/src/app.scss
@@ -543,6 +543,7 @@ a {
 @import './auth/PasswordResetPage';
 @import './auth/SignInPage';
 @import './auth/LicensePage';
+@import './repo/GitRefTag';
 @import './repo/Repository';
 @import './repo/RepoBrowser';
 @import './repo/Tooltips';
